--- a/team.html
+++ b/team.html
@@ -100,6 +100,7 @@
               </div>
               <div class="member-info">
                 <h4>Gabriel Andrés Acevedo Forero</h4>
+                <b>Proceso de aprendizaje: </b>
                 <p>Mi participación dentro del desarrollo del proyecto ha sido dirigida principalmente a: la organización del mismo; realizando labores como la subdivisión de tareas y la construcción del diagrama de desglose de trabajo, la elaboración del mapa de flujo de valor durante el diseño de la línea de producción, la propuesta del sistema MES como herramienta para gestionar la planta desde un nivel administrativo, el diseño de las máquinas de corte de bambú y de corte tipo boca de pescado para las estaciones automatizadas,  la elaboración de sus programas de control, de sus diagramas eléctricos y neumáticos,  y el comisionamiento virtual de una de ellas. Asimismo participé en la selección de los sensores y actuadores y en la identificación de riesgos en la celda robotizada. 
                   Durante el tiempo que llevamos desarrollando el proyecto he observado que la comunicación es lo más importante para lograr generar avances, ya sean avances individuales o grupales. Sin comunicación no es posible saber qué tareas faltan por completarse o en cuáles se ha avanzado, y eventualmente se podría caer en la situación de que dos personas estén trabajando en lo mismo con un planteamiento totalmente distinto.</p>
               </div>
@@ -116,9 +117,11 @@
               </div>
               <div class="member-info">
                 <h4>Ángel Esteban Díaz Sarmiento</h4>
-                <p>Dentro de mis tareas asignadas por el equipo fue el diseño de la planta sin automatizar en Plant Simulation. A partir de discusiones en grupo acordamos especificaciones de cómo queríamos que fuera la planta sobre la cual vamos a trabajar para el proyecto y para esto ha sido necesario mantener constante comunicación entre los integrantes para llegar a acuerdos y estar en sintonía sobre el desarrollo del proyecto. Posterior a la primera entrega del proyecto el equipo se centró en desarrollo de la automatización y la comunicación del proyecto y para esto se hizo una descripción detallada de los procesos automatizados haciendo un diseño preliminar de las maquinas y su correspondiente selección de actuadores. Una vez obtenidos todos los requerimientos de implementación se conforma una propuesta de inversión posterior a una evaluación económica de la planta de fabricación de bicicletas sin automatizar y se apoya en distintos indicadores económicos para evaluar la rentabilidad del proyecto de automatización. </p>
-                 <p> Como recomendación se podría llevar un control más frecuente del avance del proyecto para tener un mejor control del cumplimiento del cronograma. Asimismo, se podría ampliar en temas que sólo se tratan en la asignatura como lo son industria 4.0 y scada por encima de los que que se ven en otras asignaturas.</p>
-              </div>
+                <b>Proceso de aprendizaje: </b>
+                <p>Dentro de mis tareas asignadas por el equipo fue el diseño de la planta sin automatizar en Plant Simulation. A partir de discusiones en grupo acordamos especificaciones de cómo queríamos que fuera la planta sobre la cual vamos a trabajar para el proyecto y para esto ha sido necesario mantener constante comunicación entre los integrantes para llegar a acuerdos y estar en sintonía sobre el desarrollo del proyecto. Posterior a la primera entrega del proyecto el equipo se centró en desarrollo de la automatización y la comunicación del proyecto y para esto se hizo una descripción detallada de los procesos automatizados haciendo un diseño preliminar de las maquinas y su correspondiente selección de actuadores. Una vez obtenidos todos los requerimientos de implementación se conforma una propuesta de inversión posterior a una evaluación económica de la planta de fabricación de bicicletas sin automatizar y se apoya en distintos indicadores económicos para evaluar la rentabilidad del proyecto de automatización.</p>
+               <b>Recomendaciones:</b>
+               <p>Como recomendación se podría llevar un control más frecuente del avance del proyecto para tener un mejor control del cumplimiento del cronograma. Asimismo, se podría ampliar en temas que sólo se tratan en la asignatura como lo son industria 4.0 y scada por encima de los que que se ven en otras asignaturas.</p> 
+             </div>
             </div>
           </div>
 
@@ -132,7 +135,10 @@
               </div>
               <div class="member-info">
                 <h4>Sergio Esteban Quintero Benavides</h4>
-                <p>Mis aportes en este proyecto se encaminaron en la Gestión de producción y automatización, asi como en la configuración de los modelos de Digital Factory y el diseño de la celda robotizada. en estas secciones en particular fue vital el trabajo en equipo debido a todas las consideraciones que debiamos realizar con el fin de modelar un proceso lógico de fabricacion de bicicletas de bambú así como la simulación de este procesos teniendo en cuenta la sinergia de los diferentes software utilizados. Por otra parte, la organización de tareas y funciones entre los miembros del equipo fue de vital importancia para el correcto funcionamiento de las simulaciones realizadas. Adicionalmente, aporté con algunos datos técnicos sobre las bicicletas que fueron útiles para determinar los procesos de fabricación de las mismas. En particular, se me facilitó el uso del software NX lo cual fue de mucha ayuda para el proyecto debido a que nos permitió realizar la sección del comisionamiento virtual de la manera más optima, asegurando el correcto funcionamiento de la simulación.
+                <b>Proceso de aprendizaje:</b>
+                <p>Mis aportes en este proyecto se encaminaron en la Gestión de producción y automatización, así como en la configuración de los modelos de Digital Factory y el diseño de la celda robotizada. Estas actividades representaron un reto pues requirieron la adquisición de habilidades técnicas como la planeación de procesos de manufactura, así como el uso de software especializado como Plant Simulation, Studio 5000, NX y Robot Studio. Las habilidades blandas obtenidas se enfocaron en el trabajo en equipo, particularmente, la comunicación activa con los demás miembros del grupo de trabajo, así como la división de tareas y la sinergia entre las habilidades de cada estudiante.</p> 
+                <b> Recomendaciones:</b>
+                <p>De ser posible, realizar practicas con equipos disponibles en los laboratorios de la Universidad, hubiera sido muy interesante poder programar rutinas con el robot IRB140 o con los PLC y actuadores neumáticos del laboratorio de automatización. De no ser posibles estas prácticas. Poder ver videos donde se muestra la forma de conexión entre los software utilizados y los equipos reales también hubiera sido muy interesante.</P>
                 </p>
               </div>
             </div>
@@ -148,8 +154,10 @@
               </div>
               <div class="member-info">
                 <h4>Juan Felipe Romero Sanabria</h4>
+                <b>Proceso de aprendizaje:</b>
                 <p>Dentro de mis tareas asignadas por el equipo fue el coordinar la elaboración de la página web de GitHub y del repositorio del proyecto, además de diseño del diagrama de flujo de valor; De igual forma el manejo de las comunicaciones, entre las distintas plataformas a través de la plataforma Google Cloud, apoyo en la elaboración de la celda robotizada, realización de sistema de control y finalmente en el diseño de HMI. </p>
                 <p>El uso de plataformas como GitHub ha facilitado la comunicación y la entrega de avances de manera oportuna siendo un factor esencial permitiendo el registro de actividades y hacer control de versiones. Entre las mayores dificultades se encuentra el uso y aprendizaje de la librería “ValueStreamMapping” de PlantSimulation, además de un correcto establecimiento de todas las comunicaciones y por ultimo las limitaciones propias de los equipos usados en el desarrollo del proyecto que impedían el desarrollo de ciertos procesos o una mejor visualización del proyecto.</p>
+                <b> Recomendaciones:</b>
                 <p>Como recomendación se podría realizar una introducción a metodologías de trabajo colaborativo implementadas en el ambiente laboral, aunque el uso de GitHub es un gran acercamiento, una sesión que se enfocara en este tipo de herramientas y como benefician el trabajo entre pares, y más aún en un desarrollo virtual, siguiendo una metodología específica, permitiría explotar aún más el uso de estas plataformas. </p>
               </div>
             </div>
