--- a/team.html
+++ b/team.html
@@ -50,12 +50,12 @@
               <li><a href="planeacion.html">Gestión de Proyecto</a></li>
               <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
               <li><a href="indu4.0.html">Automatización e Industria 4.0</a></li>
-              <li><a href="celda.html">Celda de manufactura Robotizada</a></li>
+              <li><a href="celda.html">Celda de Manufactura Robotizada</a></li>
               <li><a href="digitalf.html">Digital Factory</a></li>
-              <li><a href="controladores.html">Controladores industriales (PLC)</a></li>
+              <li><a href="controladores.html">Controladores Industriales (PLC)</a></li>
               <li><a href="actuadores.html">Actuadores en Automatización</a></li>
               <li><a href="scada.html">Sistema de Supervisión SCADA</a></li>
-              <li><a href="economica.html">Evaluación económica del Proyecto</a></li>
+              <li><a href="economica.html">Evaluación Económica del Proyecto</a></li>
             </ul>
           </li>
           <li><a class="active " href="team.html">Integrantes</a></li>
