--- a/Profesores.html
+++ b/Profesores.html
@@ -88,8 +88,8 @@
     <br>
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>Automatización de Procesos de Manufactura. </h2>
-        <p>Automatización de Procesos de Manufactura es una asignatura de tipología disciplinar obligatoria de 3 créditos ofertada por la facultad de ingeniería de la Universidad Nacional de Colombia sede Bogotá para el programa de Ingeniería Mecatrónica. Esta materia busca reunir las diferentes habilidades adquiridas a lo largo de la carrera para desarrollar un proyecto integrador en el que se busca la automatización de una planta de fabricación de bicicletas, para la cual es necesario adquirir competencias en: Gestión de producción, Automatización e Industria, Planeación de proyectos y Evaluación económica, Celdas robotizadas, Digital Factory, Control con PLCs, Actuadores en automatización y SCADA</p>
+        <h2>Automatización de Procesos de Manufactura </h2>
+        <p>Automatización de Procesos de Manufactura es una asignatura de tipología disciplinar obligatoria de 3 créditos ofertada por la facultad de Ingeniería de la Universidad Nacional de Colombia sede Bogotá para el programa de Ingeniería Mecatrónica. Esta materia busca reunir las diferentes habilidades adquiridas a lo largo de la carrera para desarrollar un proyecto integrador en el que se busca la automatización de una planta de fabricación de bicicletas, para la cual es necesario adquirir competencias en: Gestión de producción, Automatización e Industria, Planeación de proyectos y Evaluación económica, Celdas robotizadas, Digital Factory, Control con PLCs, Actuadores en automatización y SCADA.</p>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
                 <p>Ingeniero Mecánico, Master en Ingeniería Mecanica,
                   Profesor Ocasional Facultad de Ingeniería Universidad Nacional de
                   Colombia Sede Bogotá. Gerente de innovación en la compañía
-                  XMARTPLM SAS</p>
+                  XMARTPLM SAS.</p>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
               </div>
               <div class="member-info">
                 <h4>Ricardo Ramirez</h4>
-                <p>Graduado en Ingeniería Mecánica en la Universidad Nacional de Colombia, graduado en Ingeniería Electrónica en la Universidad Distrital Francisco José de Caldas, Magister en Ingeniería - Automatización Industrial en la Universidad Nacional de Colombia. Doctor en Ciencias de Ingeniería Mecánica en la Universidade Federal do Rio de Janeiro
+                <p>Graduado en Ingeniería Mecánica en la Universidad Nacional de Colombia, graduado en Ingeniería Electrónica en la Universidad Distrital Francisco José de Caldas, Magister en Ingeniería - Automatización Industrial en la Universidad Nacional de Colombia. Doctor en Ciencias de Ingeniería Mecánica en la Universidade Federal do Rio de Janeiro.
                 </p>
               </div>
             </div>
