--- a/planta.html
+++ b/planta.html
@@ -94,7 +94,7 @@
                 <img src="assets/img/PlantSimu/insurgentes-1-compressor.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Urbana contrapedal</a></h5>
+                <h5 class="card-title"><a href="#">Urbana Contrapedal</a></h5>
                 <p class="card-text">Este modelo permite practicar disciplinas deportivas como el polo en bicicleta y
                   además andar por terrenos urbanos no muy agrestes debido a su bajo peso, su tecnología de transmisión
                   contrapedal y la ausencia de frenos, lo cual la hace bastante atractiva para personas que deseen
@@ -108,7 +108,7 @@
                 <img src="assets/img/PlantSimu/durangoPaula-y-Jon-8.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Urbana híbrida</a></h5>
+                <h5 class="card-title"><a href="#">Urbana Híbrida</a></h5>
                 <p class="card-text">Esta es una bicicleta capaz de andar por diferentes terrenos urbanos con facilidad
                   debido a su sistema de cambios, su sistema de frenos y su resistencia adicional en la parte inferior
                   del marco, lo cual la hace muy atractiva para los usuarios recurrentes de bicicleta en las ciudades.
@@ -311,14 +311,14 @@
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Hibrida_graph.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Hibrida</h4>
+              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Híbrida</h4>
             </div>
           </div>
           
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Urbana_graph.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Urbana</h4>
+              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Contrapedal</h4>
             </div>
           </div>
         </div>
@@ -328,7 +328,7 @@
  
     <div  data-aos="fade-up" data-aos-delay="200">
       <div class="section-title" data-aos="fade-up">
-        <h1>Planta automatizada</h1>
+        <h1>Planta Automatizada</h1>
       </div>
         <p>A raíz del estudio previo se procede a hacer las modificaciones correspondientes en las plantas de fabricación de bicicletas urbanas híbridas y de contrapedal respectivamente.</p>
         <p>Para el caso de la planta automatizada para bicicleta urbana híbrida se reemplazaron las numerosas estaciones de corte y boca de pescado en una sola. Los dos bloques encerrados en el recuadro representan la maquina automatizada de corte y boca de pescado diseñada.</p>
