--- a/planta.html
+++ b/planta.html
@@ -230,7 +230,7 @@
         </div>
 
         <hr>
-        <h2>Comparación de producción</h2>
+        <h2>Comparación de Producción</h2>
         <p>En la Tabla que se expone a continuación se puede ver una comparación en la producción de un mes de las diferentes plantas simuladas explicadas anteriormente. Es importante resaltar que el campo "Throughput per Day" hace referencia a un tiempo de 24 horas.</p>
         <img src="assets/img/PlantSimu/Tabla.PNG" class="img-fluid" alt="">
         <p>En este caso particular podemos ver como la implementación de Lugs mejora en 3,5 veces
@@ -240,7 +240,7 @@
 
         <hr>
 
-        <h2>Flujo de material</h2>
+        <h2>Flujo de Material</h2>
         <p>A continuación, se muestran las estadísticas de las estaciones en las cuales se tiene un porcentaje de tiempo
           de trabajo mayor en las plantas que utilizan el método de Lugs implementando una estación para más de un proceso
           por lo cual se pueden estar produciendo cuellos de botella en el proceso de producción.</p>
