--- a/planta.html
+++ b/planta.html
@@ -200,7 +200,7 @@
             <div class="col-lg-6 video-box">
               <iframe src="https://drive.google.com/file/d/1RHIskOMLOwDLD9zGI-eFzLMC2SKCQAo9/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta Bicicleta Urbana.</p> <br><br>
+              <p>Planta Bicicleta Contrapedal.</p> <br><br>
             </div>
             <p> En los dos siguientes casos se muestran los diseños para fábricas de bicicletas urbanas híbridas y de contrapedal cuyos marcos son armados mediante elementos metálicos de unión llamados en inglés Lugs,, los cuales son secciones de tubo cortadas y soldadas para unir los tubos de bambú del marco de la bicicleta, dichos tubos de bambú son ensamblados a los Lugs utilizando pegamentos industriales.
             </p>
@@ -212,7 +212,7 @@
             <div class="col-lg-6 video-box">
               <iframe src="https://drive.google.com/file/d/1ROrbBUTENq4u2X4BSTEP6vneNGWgksex/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta Bicicleta Urbana Lugs.</p><br><br>
+              <p>Planta Bicicleta Contrapedal Lugs.</p><br><br>
             </div>
           <p>En los dos últimos casos se muestras los diseños para fábricas de bicicletas urbanas híbridas y de contrapedal cuyos marcos son armados mediante lugs, pero esta vez se tiene un diseño más fiel a un caso real en el que no se cuenta con multiples estaciones de procesos, sino que una misma estación se encarga de mecanizar diferentes piezas (como es el caso de las estaciones de lijado, corte o boca de pescado, en donde se pasó a tener una sola estación que procesa tubos de diferentes diámetros y longitudes)..</p>
           </p>
@@ -224,7 +224,7 @@
             <div class="col-lg-6 video-box">
               <iframe src="https://drive.google.com/file/d/1RRnLrdCjs6kVGIZliZCE90v3I_Bvxwb5/preview"
                 width="100%" height="300"></iframe>
-              <p>Planta Bicicleta Urbana Lugs Unificada.</p>
+              <p>Planta Bicicleta Contrapedal Lugs Unificada.</p>
             </div>
           </div>
         </div>
@@ -290,7 +290,7 @@
         </div>
         
         
-        <p>A continuación, se presentan los tiempos de producción de 3 bicicletas por día, tanto para la referencia de Bicicleta Urbana como Hibrida,Cabe destacar que se realizo una prueba a la planta durante 30 días para evaluar si estos tiempos se mantenían de forma apropiada. Adicionalmente los tiempos correspondientes a la producción de una bicicleta de cada referencia, donde se evidencia que fracción del tiempo permite adicionar valor, que fracción se emplea en transporte y en tiempos de espera.</p>
+        <p>A continuación, se presentan los tiempos de producción de 3 bicicletas por día, tanto para la referencia de Bicicleta Híbrida como Contrapedal. Cabe destacar que se realizó una prueba a la planta durante 30 días para evaluar si estos tiempos se mantenían de forma apropiada. Adicionalmente, los tiempos correspondientes a la producción de una bicicleta de cada referencia, donde se evidencia qué fracción del tiempo permite adicionar valor, qué fracción se emplea en transporte y en tiempos de espera.</p>
 
         <br/>
         <div class="row justify-content-md-center">
@@ -304,7 +304,7 @@
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Urbana_time.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Urbana</h4>
+              <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Contrapedal</h4>
             </div>
           </div>
 
