--- a/planta.html
+++ b/planta.html
@@ -297,28 +297,28 @@
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Hibrida_time.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Hibrida</h4>
+              <h4 class="title">Tiempo de producción 3 bicicletas diarias Referencia Híbrida</h4>
             </div>
           </div>
 
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Urbana_time.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo de Producción 3 Bicicletas Diarias- Referencia Contrapedal</h4>
+              <h4 class="title">Tiempo de producción 3 bicicletas diarias Referencia Contrapedal</h4>
             </div>
           </div>
 
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Hibrida_graph.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Híbrida</h4>
+              <h4 class="title">Tiempo referentes a produccion 1 bicicleta Referencia Híbrida</h4>
             </div>
           </div>
           
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <img src="assets/img/PlantSimu/Urbana_graph.PNG" class="img-fluid" alt="">
-              <h4 class="title">Tiempo referentes a produccion 1 Bicicleta- Referencia Contrapedal</h4>
+              <h4 class="title">Tiempo referentes a produccion 1 bicicleta Referencia Contrapedal</h4>
             </div>
           </div>
         </div>
